--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,11 +11,15 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
+
     "noFallthroughCasesInSwitch": false
   }
 }
