--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,5 +21,6 @@
     "strictBindCallApply": false,
 
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": ["src", "drizzle.config.ts"]
 }
